apps/security-baseline/network-policies/redis.yaml
# ============================================================
# Namespace: redis
# ============================================================

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: redis
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress
  namespace: redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: logging
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: registry
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: databases
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: programmingclub
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: spyal
      ports:
        - protocol: TCP
          port: 6379

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9121
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-egress
  namespace: redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
